--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,19 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+/* general styles */
+
+body{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /*generic project styles*/
+    color: #3a3a3a;
+
+}
+
+
 /* Header */
 
 header{
@@ -14,6 +27,8 @@ header{
 
 main{
     background-color: lightblue;
+    /* Make main element take up any surplus space to push footer down*/
+    flex: 1 0 auto;
 }
 
 /* Footer */
