--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+/* google fonts import */
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&family=Rowdies:wght@300&display=swap')
+
 /*Asterisk wildcard selector to overide default styles from the browser*/
 *{
     padding: 0;
@@ -13,6 +17,7 @@ body{
     flex-direction: column;
     /*generic project styles*/
     color: #3a3a3a;
+    font-family: 'lato', sans-serif;
 
 }
 
