--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 
 /*Asterisk wildcard selector to overide default styles from the browser*/
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -12,7 +12,7 @@
 
 /* general styles */
 
-body{
+body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -21,19 +21,24 @@ body{
     font-family: 'Lato', sans-serif;
 }
 
-h1{
+h1 {
     font-family: 'Oswald', sans-serif;
 }
 
 /* Header */
 
-header{
-    background-color: lightcoral;
+header {
+    background-color: #ffffff;
+    padding: 0 1rem;
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    box-shadow: 0 2px 2px #3a3a3a;
 }
 
 /* Main Content */
 
-main{
+main {
     background-color: lightblue;
     /* Make main element take up any surplus space to push footer down*/
     flex: 1 0 auto;
@@ -41,6 +46,6 @@ main{
 
 /* Footer */
 
-footer{
+footer {
     background-color: orange;
 }
