--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,12 @@ main {
     flex: 1 0 auto;
 }
 
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+    list-style: none;
+}
+
 /* Footer */
 
 footer {
