--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,15 @@ main {
     list-style-type: none;
 }
 
+#menu > li {
+    margin-bottom: 1em;
+}
+
+.active {
+
+    border-bottom: 1px solid #3a3a3a;
+}
+
 /* Footer */
 
 footer {
