--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,9 @@ header {
     z-index: 99;
     width: 100%;
     box-shadow: 0 2px 2px #3a3a3a;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
 header a {
@@ -63,11 +66,34 @@ main {
 #menu > li {
     margin-bottom: 1em;
 }
+nav{
+    position: absolute;
+    background-color: #ffffff;
+    width: 100%;
+    left: 0rem;
+    padding-left: 0 1rem;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: none;
+    top: 100%;
+}
+
+/*nav toggle*/
+#nav-toggle:checked~nav {
+    display: block;
+}
+#nav-toggle {
+    display: none;S
+}
+
+.nav-toggle-label{
+    font-size: 2rem;
+}
 
 .active {
-
     border-bottom: 1px solid #3a3a3a;
 }
+
+
 
 /* Footer */
 
