--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,7 @@ main {
     background-color: lightblue;
     /* Make main element take up any surplus space to push footer down*/
     flex: 1 0 auto;
+    margin-top: 47px;
 }
 
 #menu {
