--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,3 +101,31 @@ nav{
 footer {
     background-color: orange;
 }
+
+/*media quiry: tablet and larger (768px and above)*/
+
+@media screen and (min-width: 768px){
+
+    /*header*/
+
+    nav{
+    display: block;
+    position: relative;
+    box-shadow: none;
+    width: fit-content;
+    padding-right: 1rem;
+    }
+
+    #menu{ 
+        display: flex;
+    }
+
+    #menu > li{
+        padding-left: 1rem;
+    }
+    
+    .nav-toggle-label{
+        display: none;
+    }
+
+}
