hover function 992px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,3 +144,13 @@ footer {
     }
 
 }
+
+/*/*media quiry: tablet and larger (768px and above)*/
+
+
+@media screen and (min-width: 992px) {
+    
+    #menu a:hover{
+    border-bottom: 1px solid #3a3a3a;
+    }
+}
