--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,10 +145,10 @@ footer {
 
 }
 
-/*/*media quiry: tablet and larger (768px and above)*/
+/*media quiry: tablet and larger (768px and above)*/
 
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 992px){
     
     #menu a:hover{
     border-bottom: 1px solid #3a3a3a;
