--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,8 +98,19 @@ nav{
 
 /* Footer */
 
-footer {
-    background-color: orange;
+
+ #social-networks{
+        text-align: center;
+        padding: 20px 0;
+        display: flex;
+        justify-content: space-evenly;
+        list-style-type: none;
+}
+
+i{
+        font-size: 120%;
+        padding: 5%;
+        color: #3a3a3a;
 }
 
 /*media quiry: tablet and larger (768px and above)*/
