--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,10 +52,19 @@ h1 {
 /* Main Content */
 
 main {
-    background-color: lightblue;
+
     /* Make main element take up any surplus space to push footer down*/
     flex: 1 0 auto;
     margin-top: 47px;
+}
+
+/*  Hero Section  */
+
+#hero {
+    height: 600px;
+    width: 100%;
+    background: url(../images/hero-image.webp) no-repeat center center/cover;
+
 }
 
 #menu {
@@ -64,10 +73,11 @@ main {
     list-style-type: none;
 }
 
-#menu > li {
+#menu>li {
     margin-bottom: 1em;
 }
-nav{
+
+nav {
     position: absolute;
     background-color: #ffffff;
     width: 100%;
@@ -82,11 +92,12 @@ nav{
 #nav-toggle:checked~nav {
     display: block;
 }
+
 #nav-toggle {
     display: none;
 }
 
-.nav-toggle-label{
+.nav-toggle-label {
     font-size: 2rem;
 }
 
@@ -99,47 +110,47 @@ nav{
 /* Footer */
 
 
- #social-networks{
-        text-align: center;
-        padding: 20px 0;
-        display: flex;
-        justify-content: space-evenly;
-        list-style-type: none;
+#social-networks {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
 }
 
- #social-networks i{
-        font-size: 160%;
-        padding: 5%;
-        color: #3a3a3a;
+#social-networks i {
+    font-size: 160%;
+    padding: 5%;
+    color: #3a3a3a;
 }
 
 /*media quiry: tablet and larger (768px and above)*/
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) {
 
     /*header*/
 
-    nav{
-    display: block;
-    position: relative;
-    box-shadow: none;
-    width: fit-content;
-    padding-right: 1rem;
+    nav {
+        display: block;
+        position: relative;
+        box-shadow: none;
+        width: fit-content;
+        padding-right: 1rem;
     }
 
-    #menu{ 
+    #menu {
         display: flex;
     }
 
-    #menu > li{
+    #menu>li {
         padding-left: 1rem;
     }
-    
-    .nav-toggle-label{
+
+    .nav-toggle-label {
         display: none;
     }
 
-    #logo{
+    #logo {
         font-size: 280%;
         line-height: 75px;
         margin: 0 0.5rem;
@@ -147,7 +158,7 @@ nav{
 
     /*main content*/
 
-    main{ 
+    main {
 
         /*push main content down to accomodate header*/
         margin-top: 79px;
@@ -159,9 +170,9 @@ nav{
 /*media quiry: tablet and larger (768px and above)*/
 
 
-@media screen and (min-width: 992px){
-    
-    #menu a:hover{
-    border-bottom: 1px solid #3a3a3a;
+@media screen and (min-width: 992px) {
+
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
     }
 }
