--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,26 @@ main {
 
 }
 
+#reasons {
+    width: 90%;
+    margin: 20px auto;
+}
+
+#reasons > h2 {
+    font-size: 280%;
+}
+
+#benefits-physical #benefits-mental{
+    line-height: 20px;
+    margin-bottom: 20px;
+    padding: 0 20px;
+}
+
+#benefits > h3{
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
+
+}
 
 #cover-text {
     /* final value sets the transparency */
