--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,8 +84,8 @@ main {
     padding: 0 20px;
 }
 
-#benefits > h3{
-    border-top: 1px solid #3a3a3a;
+#benefits h3{
+    border-bottom: 1px solid #3a3a3a;
     margin: 5px 0;
 
 }
