--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,8 @@ main {
 
 }
 
+/* Reasons Section */
+
 #reasons {
     width: 90%;
     margin: 20px auto;
@@ -77,21 +79,25 @@ main {
 #reasons > h2 {
     font-size: 280%;
     text-transform: uppercase;
+    margin-top: 20px;
+    text-align: center;
 }
 
-#benefits-physical #benefits-mental{
+#benefits-physical div #benefits-mental div{
     line-height: 20px;
     margin-bottom: 20px;
+}
+
+#benefits p{
     padding: 0 20px;
 }
 
-#benefits h3{
+#benefits hr{
     border-bottom: 1px solid #3a3a3a;
     margin: 5px 0;
-
 }
 
-#benefits span{
+#benefits i {
     margin-left: 10px;
 }
 
