--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,10 @@ h3 {
     color: #252525;
 }
 
+.hidden-heading{
+    display: none;
+}
+
 /* Header */
 
 header {
@@ -172,7 +176,35 @@ nav {
     border-bottom: 1px solid #3a3a3a;
 }
 
+/*sign-up section*/
 
+#times {
+    display: flex;
+    width: 100%;
+    background: url(../images/dublin-city.webp) no-repeat center center / cover;
+    flex-wrap: wrap;
+}
+
+#times div {
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, .6);
+    padding: 15px;
+    text-align: center;
+    /*This will not wrap on a screen less than 400px wide. Each div will expand to fill the avalable space on the row.*/
+    flex-basis: 200px;
+    flex-grow: 1;
+    /*creates a grid of meet-up times over the backgroun-image*/
+    border: 2px solid white;
+}
+
+#times h3{
+    /* Override the general color style*/
+    color: #fafafa
+}
+
+#times .i {
+    margin-left: 10px
+}
 
 /* Footer */
 
@@ -190,6 +222,9 @@ nav {
     padding: 5%;
     color: #3a3a3a;
 }
+
+
+
 
 /*media quiry: tablet and larger (768px and above)*/
 
@@ -256,6 +291,8 @@ nav {
         text-align: end;
         align-self: flex-end;
      }
+
+
 
 
 /*media quiry: tablet and larger (768px and above)*/
