add style to photos in gallery page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,17 @@ nav {
     margin-left: 10px
 }
 
+/* Gallery Page */
+
+#photos img{
+        width: 100%;
+        line-height: 1em;
+    }
+
+#photos{
+    line-height: 0;
+}
+
 /* Footer */
 
 
