upperdate media screen to accomodate different sizd columns

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,7 +234,14 @@ nav {
     color: #3a3a3a;
 }
 
+/* media query: large or landscape photos (576px and up)*/
+@media screen and (min-width: 576px) {
 
+#photos{
+    column-count: 2;
+    column-gap: 0;
+}
+}
 
 
 /*media quiry: tablet and larger (768px and above)*/
@@ -303,10 +310,12 @@ nav {
         align-self: flex-end;
      }
 
+     #photos{
+        column-count: 3;
+     }
 
 
-
-/*media quiry: tablet and larger (768px and above)*/
+/*media quiry: laptop and larger (992px and above)*/
 
 
 @media screen and (min-width: 992px) {
@@ -315,6 +324,10 @@ nav {
         border-bottom: 1px solid #3a3a3a;
     }
 }
+
+    #photos{
+        column-count: 4;
+    }
 
 @media screen and (min-width: 1200px) {
     
