--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,6 +217,80 @@ nav {
     line-height: 0;
 }
 
+/* Sign-Up Page*/ 
+
+/* Main content */
+main {
+    /* Enlarge main element to push footer down*/
+    flex: 1 0 auto;
+    /* Add margin at the top to prevent content from being covered by the header */
+    margin-top: 47px;
+    /* Enable flex properties for child elements */
+    display: flex;
+    flex-direction: column;
+}
+
+/* Form */
+
+main{
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 auto;
+    margin-top: 47px;
+}
+
+
+
+#signup{
+        
+    background: url("../images/signup-image.webp") no-repeat center center / cover;
+    background-size: cover;
+    background-position: 75%;
+    padding: 20px 10% 0 10%;
+    flex-grow: 1;
+
+}
+
+#signup-form{
+    color: #ffffff;
+    background-color: rgba(60, 60, 60, .6);
+    padding: 30px;
+}
+
+#signup h2 {
+    color: #fafafa;
+    margin-bottom: 20px;
+}
+
+.text-input{
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    padding: 0 5px;
+    
+}
+
+
+.radio-buttons{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.join-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    font-size: 100%;
+    background-color: #454b1b;
+    color: #fafafa;
+}
+
+
 /* Footer */
 
 
@@ -313,7 +387,29 @@ nav {
      #photos{
         column-count: 3;
      }
-
+     
+     /* Form */
+    #signup {
+            background-position: center;
+             position: relative;
+         }
+    
+         #signup-form {
+             max-width: 400px;
+             position: absolute;
+             left: 10%;
+             top: 150px;
+         }
+    
+         .text-input:hover {
+             border-color: #f16c6b;
+         }
+    
+         .join-button:hover {
+             background-color: #fafafa;
+             color: #454b1b;
+         }
+         }
 
 /*media quiry: laptop and larger (992px and above)*/
 
